--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,3 +75,6 @@ select = [
 [tool.ruff.lint.per-file-ignores]
 '__init__.py' = ['E402']
 'tests/**/*' = ['T201']
+
+[tool.ruff.lint.isort]
+lines-between-types = 1
