--- a/pyproject.toml
+++ b/pyproject.toml
@@ -72,7 +72,7 @@ select = [
 
 ]
 # settings are a mess, ignore them for now
-exclude = ["snodas/settings/*"]
+exclude = ['snodas/settings/*']
 
 [tool.ruff.lint.per-file-ignores]
 '__init__.py' = ['E402']
@@ -81,3 +81,10 @@ exclude = ["snodas/settings/*"]
 
 [tool.ruff.lint.isort]
 lines-between-types = 1
+
+[tool.mypy]
+ignore_missing_imports = true
+scripts_are_modules = true
+exclude = [
+    '^snodas/settings/.*\.py$',
+]
