--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -4,79 +4,77 @@
 #
 #    ./bin/compile-requirements.bash
 #
-build==1.2.1
+build==1.2.2.post1
     # via pip-tools
 cfgv==3.4.0
     # via pre-commit
-click==8.1.7
+click==8.1.8
     # via pip-tools
-coverage==7.4.4
+coverage==7.6.10
     # via pytest-cov
-distlib==0.3.8
+distlib==0.3.9
     # via virtualenv
-filelock==3.13.4
+filelock==3.17.0
     # via virtualenv
-identify==2.5.36
+identify==2.6.6
     # via pre-commit
 iniconfig==2.0.0
     # via pytest
-mypy==1.9.0
+mypy==1.14.1
     # via -r requirements-dev.in
 mypy-extensions==1.0.0
     # via mypy
-nodeenv==1.8.0
+nodeenv==1.9.1
     # via pre-commit
-packaging==24.0
+packaging==24.2
     # via
     #   build
     #   pytest
 pip-tools==7.4.1
     # via -r requirements-dev.in
-platformdirs==4.2.0
+platformdirs==4.3.6
     # via virtualenv
 pluggy==1.5.0
     # via pytest
-pre-commit==3.7.0
+pre-commit==4.1.0
     # via -r requirements-dev.in
-pre-commit-hooks==4.6.0
+pre-commit-hooks==5.0.0
     # via -r requirements-dev.in
-pyproject-hooks==1.0.0
+pyproject-hooks==1.2.0
     # via
     #   build
     #   pip-tools
-pytest==8.1.1
+pytest==8.3.4
     # via
     #   -r requirements-dev.in
     #   pytest-cov
-pytest-cov==5.0.0
+pytest-cov==6.0.0
     # via -r requirements-dev.in
-pyyaml==6.0.1
+pyyaml==6.0.2
     # via
     #   -c requirements.txt
     #   pre-commit
-ruamel-yaml==0.18.6
+ruamel-yaml==0.18.10
     # via pre-commit-hooks
-ruamel-yaml-clib==0.2.8
+ruamel-yaml-clib==0.2.12
     # via ruamel-yaml
-ruff==0.4.5
+ruff==0.9.3
     # via -r requirements-dev.in
-types-pyyaml==6.0.12.20240311
+types-pyyaml==6.0.12.20241230
     # via -r requirements-dev.in
-types-waitress==3.0.0.20240423
+types-waitress==3.0.1.20241117
     # via -r requirements-dev.in
-typing-extensions==4.11.0
+typing-extensions==4.12.2
     # via
     #   -c requirements.txt
     #   mypy
-virtualenv==20.25.3
+virtualenv==20.29.1
     # via pre-commit
-wheel==0.43.0
+wheel==0.45.1
     # via pip-tools
 
 # The following packages are considered to be unsafe in a requirements file:
-pip==24.0
+pip==25.0
     # via pip-tools
-setuptools==69.5.1
-    # via
-    #   nodeenv
-    #   pip-tools
+setuptools==75.8.0
+    # via pip-tools
