--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@
 #
 #    ./bin/compile-requirements.bash
 #
-annotated-types==0.6.0
+annotated-types==0.7.0
     # via pydantic
 area==1.1.1
     # via django-snodas (pyproject.toml)
@@ -12,38 +12,38 @@ asgiref==3.8.1
     # via
     #   django
     #   django-cors-headers
-django==5.1a1
+django==5.1.5
     # via
     #   django-cors-headers
     #   django-ninja
     #   django-snodas (pyproject.toml)
-django-cors-headers==4.3.1
+django-cors-headers==4.6.0
     # via django-snodas (pyproject.toml)
-django-ninja==1.1.0
+django-ninja==1.3.0
     # via django-snodas (pyproject.toml)
-django-split-settings==1.3.1
+django-split-settings==1.3.2
     # via django-snodas (pyproject.toml)
-gdal==3.8.5
+gdal==3.10.1
     # via django-snodas (pyproject.toml)
-numpy==1.26.4
+numpy==2.2.2
     # via django-snodas (pyproject.toml)
-psycopg2-binary==2.9.9
+psycopg2-binary==2.9.10
     # via django-snodas (pyproject.toml)
-pydantic==2.7.0
+pydantic==2.10.6
     # via
     #   django-ninja
     #   django-snodas (pyproject.toml)
-pydantic-core==2.18.1
+pydantic-core==2.27.2
     # via pydantic
-pyyaml==6.0.1
+pyyaml==6.0.2
     # via django-snodas (pyproject.toml)
-sqlparse==0.5.0
+sqlparse==0.5.3
     # via
     #   django
     #   django-snodas (pyproject.toml)
-typing-extensions==4.11.0
+typing-extensions==4.12.2
     # via
     #   pydantic
     #   pydantic-core
-waitress==3.0.0
+waitress==3.0.2
     # via django-snodas (pyproject.toml)
